--- a/style.css
+++ b/style.css
@@ -44,6 +44,17 @@ h3 {
     margin: 0 0 19px 0;
 }
 
+h4 {
+    color: #000;
+    font-family: Jomhuria;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 89%; /* 35.6px */
+    letter-spacing: 1.2px;
+    margin: 12px 0 0 21px;
+}
+
 .menu__seznam {
     background:#F1F1F1;
     display: flex;
@@ -64,11 +75,6 @@ h3 {
 
 }
 
-img {
-    width: 55px;
-    height: 55px;
-    align-self:flex-end;
-}
 
 p {
     color: #000;
@@ -124,4 +130,24 @@ a {
     background: #FFF;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25); 
     display: flex;
+    flex-direction: column;
+}
+
+.obr--produkt img {
+    width: 353px;
+    height: 237px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+popisek--produkt {
+    display: flex;
+    flex-direction: row;
+}
+.popisek--produkt img {
+    width: 65px;
+    height: 65px;
+}
+
+.popisek--produkt p {
+    margin: 5px 0 0 21px;
 }
